tests/fail/semantics/unresolved_namespace/main.kira
@Main
function entry() {
    Missing.value;
    return;
}
